--- a/form.html
+++ b/form.html
@@ -35,7 +35,7 @@
    
 <br />
 
-<button type="button" >Load Data</button>
+<button type="button" id="loadData" >Load Data</button>
 <br/>
 <h1>Entered Records:</h1>
 
